Fix broken CSS background image path for coming-soon-bg.jpg

--- a/project-root/style.css
+++ b/project-root/style.css
@@ -9,7 +9,7 @@
 body {
     line-height: 1.6;
     color: #333;
-    background-image: url('./coming-soon-bg.jpg');
+    background-image: url('./images/coming-soon-bg.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
